--- a/css/main.css
+++ b/css/main.css
@@ -64,9 +64,77 @@ body {
 }
 .section-title b {
   font-weight: 700;
-
 }
-
+.section-bar{
+padding-bottom: 15px;
+}
+.section-bar::after{
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 2px;
+  width: 20px;
+  height: 2px;
+  background-color: #707070;
+}
+.section-title-txt{
+  position: relative;
+  display: block;
+  margin-bottom: 20px;
+}
+.section-bt{
+  position: relative;
+  display: block;
+  width: 114px;
+  height: 34px;
+  text-align: center;
+  line-height: 32px;
+  border: 1px solid #bbb;
+  background-color: #fff;
+  color: #666;
+  font-size: 13px;
+  transition: backgrounde 0.5s;
+}
+.section-bt:hover{
+  background: #f9f9f9;
+}
+.slide-control{
+  position: relative;
+  display: block;
+  width: 140px;
+  margin-top: 0px;
+}
+.slide-prev,
+.slide-next {
+  position: absolute;
+  top: 0;
+  width: 26px;
+  height: 20px;
+  border: 0;
+  cursor: pointer;
+  font-size: 0;
+  background: transparent;
+}
+.slide-prev{
+  background: url("../images/swiperArrP.png") no-repeat;
+  left: 0;
+}
+.slide-prev:hover{
+  background-position: 0px -20px;
+}
+.slide-next{
+  right: 0;
+  background: url("../images/swiperArrN.png") no-repeat;
+}
+.slide-next:hover{
+  background-position: 0px -20px;
+}
+.slide-pg{
+  position: relative;
+  display: block;
+  text-align: center;
+  bottom: 0 !important;
+}
 /* 전체레이아웃 */
 .wrap {
   position: relative;
@@ -759,5 +827,102 @@ body {
   width: 290px;
   height: 410px;
   background-color: #fff;
-  
+}
+.good-img{
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 290px;
+  overflow: hidden;
+}
+.good-img > img{
+  transition: transform 0.5s;
+}
+.good-img:hover > img{
+  transform: scale(1.1);
+}
+.good-type{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  background-color: #76bd42;
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+.good-info{
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 60px;
+  background-color: #f7e5d3;
+  padding: 15px;
+  font-size: 17px;
+  color: #000;
+}
+.good-info em{
+  font-style: normal;
+}
+.good-info-price {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding: 0 15px;
+  font-size: 22px;
+  color: #000;
+  font-weight: 500;
+
+}
+.good-info-price em{
+  font-size: 17px;
+  font-style: normal;
+}
+
+.good-add-cart{
+  position: absolute;
+  right: 23px;
+  bottom: 32px;
+  width: 30px;
+  height: 30px;
+  border: 0;
+  background: url("../images/btnCartList.png") no-repeat;
+  background-position: 0 0;
+  cursor: pointer;
+}
+.no-mb {
+  margin-bottom: 0 !important;
+}
+/* 섹션 레이아웃 */
+.layout-wrap{
+  position: relative;
+  display: block;
+}
+.layout-left{
+  position: relative;
+  display: block;
+  width: calc(100% - 900px);
+  float: left;
+}
+.layout-right{
+  position: relative;
+  display: block;
+  width: 900px;
+  float: right;
+}
+.good-slide{
+  position: relative;
+  display: block;
+}
+/* 알뜰 상품 */
+.sale{
+  position: relative;
+  display: block;
+  background-color:#edf9f9 ;
+}
+.sale .slide-control{
+  margin-top: 100px;
 }
