--- a/css/main.css
+++ b/css/main.css
@@ -813,7 +813,7 @@ padding-bottom: 15px;
 .today{
   position: relative;
   display: block;
-  background-color: #ff9933;
+  /* background-color: #ff9933; */
 }
 .good-wrap{
   position: relative;
@@ -1050,6 +1050,56 @@ padding-bottom: 15px;
 .popular-more:hover{
   background: #f9f9f9;
 }
+.popular-cate{
+  /* background-color: #ff9933; */
+  display: block;
+  position: relative;
+  margin-bottom: 40px;
+}
+.popular-slide-prev,
+.popular-slide-next{
+  position: relative;
+  display: block;
+  width: 80px;
+  height: 140px;
+  background-color: #fff;
+}
+.popular-slide-prev{
+  float: left;
+}
+.popular-slide-prev span{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 26px;
+  height: 20px;
+  background: url("../images/swiperArrP.png") no-repeat;
+  background-position: 0px 0px;
+  font-size: 0;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.popular-slide-prev span:hover{
+  background-position: 0px -20px;
+}
+.popular-slide-next{
+  float: right;
+}
+.popular-slide-next span{
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 26px;
+  height: 20px;
+  background: url("../images/swiperArrN.png") no-repeat;
+  font-size: 0;
+  transform: translateY(-50%);
+  cursor: pointer;
+  background-position: 0px 0px;
+}
+.popular-slide-next span:hover{
+background-position: 0px -20px;
+}
 .popular-slide {
   position: relative;
   display: block;
@@ -1063,6 +1113,14 @@ padding-bottom: 15px;
   display: block;
   width: 140px;
   height: 140px;
+  background-color: #f9f9f9;
+  overflow: hidden;
+  border: 1px solid rgba(0, 0, 0, 0);
+  transition: all 0.3s;
+}
+.popular-slide a:hover{
+  background-color: #fff;
+  border: 1px solid #76bd42;
 }
 .popular-cate-icon{
   position: relative;
@@ -1078,4 +1136,69 @@ padding-bottom: 15px;
   font-size: 17px;
   text-align: center;
   white-space: nowrap;
+}
+/* 브랜드관 */
+.brand{
+  position: relative;
+  display: block;
+  background-color: #f3f9f0;
+}
+.brand .slide-control{
+  margin-top: 25px;
+}
+.brand-slide{
+  position: relative;
+  display: block;
+}
+.brand-box{
+  position: relative;
+  display: block;
+  width: 285px;
+  height: 285px;
+  background-color: #fff;
+  padding: 35px 30px;
+
+}
+.brand-box a{
+  position: relative;
+  display: block;
+  text-align: center;
+}
+.brand-box a img{
+  position: relative;
+  display: inline-block;
+}
+.brand-box a p{
+  position: relative;
+  display: block;
+  font-size: 18px;
+  font-weight: 500;
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+.brand-info{
+  position: relative;
+  display: block;
+}
+.brand-info > li{
+  position: relative;
+  display: block;
+  width: 50%;
+  border-right: 1px solid #e3e3e3;
+  float: left;
+}
+.brand-info > li:last-child{
+  border-right: 0;
+}
+.brand-info-title{
+  text-align: center;
+  font-size: 16px;
+  color: #666;
+  margin: 5px 0;
+}
+.brand-info-value{
+  position: relative;
+  display: block;
+  font-size: 18px;
+  font-weight: 500;
 }
