--- a/css/main.css
+++ b/css/main.css
@@ -43,17 +43,17 @@ body {
   width: 1200px;
   margin: 0 auto;
 }
-/* swiper 기본 셋팅 */
+/* swiper기본 셋팅 */
 .swiper {
   width: 100%;
   height: 100%;
 }
-/* section 레이아웃 공통 패딩 */
-.wrap > section{
+/* section 레이아웃 공통 패팅 */
+.wrap > section {
   padding: 80px 0;
 }
-/* 타이틀 레이아웃 */
-.section-title{
+/* 타이틀 레이웃 */
+.section-title {
   position: relative;
   display: block;
   font-size: 32px;
@@ -65,10 +65,10 @@ body {
 .section-title b {
   font-weight: 700;
 }
-.section-bar{
-padding-bottom: 15px;
+.section-bar {
+  padding-bottom: 15px;
 }
-.section-bar::after{
+.section-bar::after {
   content: "";
   position: absolute;
   bottom: 0px;
@@ -77,12 +77,12 @@ padding-bottom: 15px;
   height: 2px;
   background-color: #707070;
 }
-.section-title-txt{
+.section-title-txt {
   position: relative;
   display: block;
   margin-bottom: 20px;
 }
-.section-bt{
+.section-bt {
   position: relative;
   display: block;
   width: 114px;
@@ -93,12 +93,12 @@ padding-bottom: 15px;
   background-color: #fff;
   color: #666;
   font-size: 13px;
-  transition: backgrounde 0.5s;
+  transition: background 0.5s;
 }
-.section-bt:hover{
+.section-bt:hover {
   background: #f9f9f9;
 }
-.slide-control{
+.slide-control {
   position: relative;
   display: block;
   width: 140px;
@@ -108,6 +108,7 @@ padding-bottom: 15px;
 .slide-next {
   position: absolute;
   top: 0;
+  display: block;
   width: 26px;
   height: 20px;
   border: 0;
@@ -115,21 +116,21 @@ padding-bottom: 15px;
   font-size: 0;
   background: transparent;
 }
-.slide-prev{
+.slide-prev {
   background: url("../images/swiperArrP.png") no-repeat;
   left: 0;
 }
-.slide-prev:hover{
+.slide-prev:hover {
   background-position: 0px -20px;
 }
-.slide-next{
+.slide-next {
   right: 0;
   background: url("../images/swiperArrN.png") no-repeat;
 }
-.slide-next:hover{
+.slide-next:hover {
   background-position: 0px -20px;
 }
-.slide-pg{
+.slide-pg {
   position: relative;
   display: block;
   text-align: center;
@@ -683,12 +684,13 @@ padding-bottom: 15px;
   text-align: center;
   color: #fff;
   background-color: #76bd42;
+
   line-height: 18px;
   font-size: 11px;
   font-weight: 700;
 }
 /* 비주얼 */
-.visual{
+.visual {
   position: relative;
   display: block;
   width: 100%;
@@ -696,39 +698,40 @@ padding-bottom: 15px;
   padding: 0 !important;
   overflow: hidden;
 }
-.visual-slide{
+.visual-slide {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
 }
-.swiper-slide{
+.swiper-slide {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
 }
-.visual-slide-page{
+.visual-slide-page {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
+  background-color: #76bd42;
 }
-.visual-slide-page a{
+.visual-slide-page a {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
   text-align: center;
 }
-.visual-slide-page a img{
+.visual-slide-page a img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 /* 슬라이드 이전 다음 버튼 */
 .visual-prev,
-.visual-next{
+.visual-next {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -742,34 +745,34 @@ padding-bottom: 15px;
   font-size: 0;
   cursor: pointer;
 }
-.visual-prev{
+.visual-prev {
   left: calc(50% - 600px);
-  /* left: 50%; */
-  background: rgba(0, 0, 0, 0) url(../images/visualArrP.png) no-repeat;
+  /* left: 50% ; */
+  background: rgba(0, 0, 0, 0) url("../images/visualArrP.png") no-repeat;
   background-position: 0px -64px;
 }
-.visual-prev:hover{
-  background: rgba(0, 0, 0, 0.3) url(../images/visualArrP.png) no-repeat;
+.visual-prev:hover {
+  background: rgba(0, 0, 0, 0.3) url("../images/visualArrP.png") no-repeat;
   background-position: 0px 0px;
 }
-.visual-next{
+.visual-next {
   right: calc(50% - 600px);
-  background: rgba(0, 0, 0, 0) url(../images/visualArrN.png) no-repeat;
+  background: rgba(0, 0, 0, 0) url("../images/visualArrN.png") no-repeat;
   background-position: 0px -64px;
 }
-.visual-next:hover{
-  background: rgba(0, 0, 0, 0.3) url(../images/visualArrN.png) no-repeat;
+.visual-next:hover {
+  background: rgba(0, 0, 0, 0.3) url("../images/visualArrN.png") no-repeat;
   background-position: 0px 0px;
 }
 /* 콘트롤러 */
-.visual-control{
+.visual-control {
   position: absolute;
   bottom: 43px;
   z-index: 999;
-  left: calc(50% - 600px + 80px );
+  left: calc(50% - 600px + 80px);
   display: block;
 }
-.visual-play{
+.visual-play {
   position: relative;
   display: block;
   width: 30px;
@@ -780,10 +783,10 @@ padding-bottom: 15px;
   border: 0;
   float: left;
 }
-.visual-play.active{
+.visual-play.active {
   background-position: 0px -30px;
 }
-.visual-pg{
+.visual-pg {
   position: relative;
   display: block;
   width: 52px !important;
@@ -798,7 +801,7 @@ padding-bottom: 15px;
   float: left;
   bottom: 0 !important;
 }
-.visual-more{
+.visual-more {
   position: relative;
   display: block;
   width: 29px;
@@ -806,42 +809,42 @@ padding-bottom: 15px;
   background: url("../images/visualMore.png") no-repeat;
   cursor: pointer;
   border: 0;
-  margin-left: 4px;
+  margin-left: 3px;
   float: left;
 }
 /* 오늘의 상품 */
-.today{
+.today {
   position: relative;
   display: block;
-  /* background-color: #ff9933; */
+  background-color: #ff9933;
 }
-.good-wrap{
+.good-wrap {
   position: relative;
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
 }
-.good-box{
+.good-box {
   position: relative;
   display: block;
   width: 290px;
   height: 410px;
   background-color: #fff;
 }
-.good-img{
+.good-img {
   position: relative;
   display: block;
   width: 100%;
   height: 290px;
   overflow: hidden;
 }
-.good-img > img{
+.good-img > img {
   transition: transform 0.5s;
 }
-.good-img:hover > img{
+.good-img:hover > img {
   transform: scale(1.1);
 }
-.good-type{
+.good-type {
   position: absolute;
   top: 0;
   right: 0;
@@ -854,17 +857,16 @@ padding-bottom: 15px;
   font-size: 14px;
   font-weight: 500;
 }
-.good-info{
+.good-info {
   position: relative;
   display: block;
   width: 100%;
   height: 60px;
-  /* background-color: #f7e5d3; */
   padding: 15px;
   font-size: 17px;
   color: #000;
 }
-.good-info em{
+.good-info em {
   font-style: normal;
 }
 .good-info-price {
@@ -875,101 +877,99 @@ padding-bottom: 15px;
   font-size: 22px;
   color: #000;
   font-weight: 500;
-
 }
-.good-info-price em{
+.good-info-price em {
   font-size: 17px;
   font-style: normal;
 }
-
-.good-add-cart{
+.good-add-cart {
   position: absolute;
   right: 23px;
   bottom: 32px;
   width: 30px;
   height: 30px;
-  border: 0;
   background: url("../images/btnCartList.png") no-repeat;
   background-position: 0 0;
+  border: 0;
   cursor: pointer;
 }
+
 .no-mb {
-  margin-bottom: 0 !important;
+  margin-bottom: 0;
 }
 /* 섹션 레이아웃 */
-.layout-wrap{
+.layout-wrap {
   position: relative;
   display: block;
 }
-.layout-left{
+.layout-left {
   position: relative;
   display: block;
   width: calc(100% - 900px);
   float: left;
 }
-.layout-right{
+.layout-right {
   position: relative;
   display: block;
   width: 900px;
   float: right;
 }
-.good-slide{
+.good-slide {
   position: relative;
   display: block;
 }
 /* 알뜰 상품 */
-.sale{
+.sale {
   position: relative;
   display: block;
-  background-color:#edf9f9 ;
+  background-color: #edf9f9;
 }
-.sale .slide-control{
+.sale .slide-control {
   margin-top: 100px;
 }
 /* 신상품 */
-.new{
+.new {
   position: relative;
   display: block;
 }
-.new .section-bt{
+.new .section-bt {
   position: absolute;
   right: 0;
   bottom: 0;
 }
 
-.new-wrap{
+.new-wrap {
   position: relative;
   display: block;
   border-bottom: 1px solid #eee;
   padding-bottom: 50px;
 }
-.new-left{
+.new-left {
   position: relative;
   display: block;
   width: calc(50% - 8px);
   float: left;
 }
-.new-img{
+.new-img {
   position: relative;
   display: block;
   height: 370px;
   margin-bottom: 20px;
   overflow: hidden;
 }
-.new-title{
+.new-title {
   position: relative;
   display: block;
   margin-bottom: 10px;
   font-size: 25px;
   font-weight: 700;
-
 }
-.new-txt{
+.new-txt {
   position: relative;
   display: block;
   font-size: 17px;
 }
-.new-right{
+.new-right {
   position: relative;
   display: block;
   width: calc(50% - 8px);
@@ -980,7 +980,7 @@ padding-bottom: 15px;
   display: block;
   width: calc(50% - 8px);
 }
-.new-box-img{
+.new-box-img {
   position: relative;
   display: block;
   width: 100%;
@@ -988,52 +988,52 @@ padding-bottom: 15px;
   overflow: hidden;
   margin-bottom: 15px;
 }
-
-.new-box-img img{
+.new-box-img img {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50% , -50%);
+  transform: translate(-50%, -50%);
   width: 102%;
 }
-.new-box-title{
+.new-box-title {
   position: relative;
   display: block;
   font-size: 17px;
-  /* 말줄임...처리 */
+  font-weight: 500;
+  /* 말줄임 ...처리 */
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   margin-bottom: 10px;
 }
 /* 홀수는 float:left */
-.new-right .new-box:nth-child(2n + 1){
+.new-right .new-box:nth-child(2n + 1) {
   float: left;
 }
 /* 짝수는 float:right */
-.new-right .new-box:nth-child(2n){
+.new-right .new-box:nth-child(2n) {
   float: right;
 }
-/* 추천물품 */
-.reconmend{
+/* 추천물품  */
+.recommend {
   position: relative;
   display: block;
-  background-color:#fff8fa;
+  background-color: #fff8fa;
 }
-.reconmend .section-title-txt{
+.recommend .section-title-txt {
   font-size: 17px;
   border-bottom: 2px solid #76bd42;
   display: inline-block;
 }
-.blue{
+.blue {
   color: #76bd42;
 }
-/* 인기 물품 */
-.popular{
+/* 인기물품 */
+.popular {
   position: relative;
   display: block;
 }
-.popular-more{
+.popular-more {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -1043,62 +1043,61 @@ padding-bottom: 15px;
   line-height: 32px;
   display: inline-block;
   text-align: center;
-  background-color: #fff;
   font-size: 13px;
+  background-color: #fff;
   transition: background 0.5s;
 }
-.popular-more:hover{
+.popular-more:hover {
   background: #f9f9f9;
 }
-.popular-cate{
-  /* background-color: #ff9933; */
+.popular-cate {
   display: block;
   position: relative;
   margin-bottom: 40px;
 }
 .popular-slide-prev,
-.popular-slide-next{
+.popular-slide-next {
   position: relative;
   display: block;
   width: 80px;
   height: 140px;
   background-color: #fff;
 }
-.popular-slide-prev{
+.popular-slide-prev {
   float: left;
 }
-.popular-slide-prev span{
+.popular-slide-prev span {
   position: absolute;
   left: 0;
   top: 50%;
+  transform: translateY(-50%);
   width: 26px;
   height: 20px;
   background: url("../images/swiperArrP.png") no-repeat;
   background-position: 0px 0px;
   font-size: 0;
-  transform: translateY(-50%);
   cursor: pointer;
 }
-.popular-slide-prev span:hover{
+.popular-slide-prev span:hover {
   background-position: 0px -20px;
 }
-.popular-slide-next{
-  float: right;
-}
-.popular-slide-next span{
+.popular-slide-next span {
   position: absolute;
   right: 0;
   top: 50%;
+  transform: translateY(-50%);
   width: 26px;
   height: 20px;
   background: url("../images/swiperArrN.png") no-repeat;
-  font-size: 0;
-  transform: translateY(-50%);
-  cursor: pointer;
   background-position: 0px 0px;
+  font-size: 0;
+  cursor: pointer;
 }
-.popular-slide-next span:hover{
-background-position: 0px -20px;
+.popular-slide-next span:hover {
+  background-position: 0px -20px;
+}
+.popular-slide-next {
+  float: right;
 }
 .popular-slide {
   position: relative;
@@ -1106,9 +1105,8 @@ background-position: 0px -20px;
   width: calc(100% - 80px - 80px);
   height: 140px;
   float: left;
-  /* background-color: #ff9933; */
 }
-.popular-slide a{
+.popular-slide a {
   position: relative;
   display: block;
   width: 140px;
@@ -1118,11 +1116,11 @@ background-position: 0px -20px;
   border: 1px solid rgba(0, 0, 0, 0);
   transition: all 0.3s;
 }
-.popular-slide a:hover{
+.popular-slide a:hover {
   background-color: #fff;
   border: 1px solid #76bd42;
 }
-.popular-cate-icon{
+.popular-cate-icon {
   position: relative;
   display: block;
   width: 65px;
@@ -1130,7 +1128,7 @@ background-position: 0px -20px;
   overflow: hidden;
   margin: 20px auto;
 }
-.popular-cate-name{
+.popular-cate-name {
   position: relative;
   display: block;
   font-size: 17px;
@@ -1138,37 +1136,36 @@ background-position: 0px -20px;
   white-space: nowrap;
 }
 /* 브랜드관 */
-.brand{
+.brand {
   position: relative;
   display: block;
   background-color: #f3f9f0;
 }
-.brand .slide-control{
+.brand .slide-control {
   margin-top: 25px;
 }
-.brand-slide{
+.brand-slide {
   position: relative;
   display: block;
 }
-.brand-box{
+.brand-box {
   position: relative;
   display: block;
   width: 285px;
   height: 285px;
   background-color: #fff;
-  padding: 35px 30px;
-
+  padding: 35px 25px;
 }
-.brand-box a{
+.brand-box a {
   position: relative;
   display: block;
   text-align: center;
 }
-.brand-box a img{
+.brand-box a img {
   position: relative;
   display: inline-block;
 }
-.brand-box a p{
+.brand-box a p {
   position: relative;
   display: block;
   font-size: 18px;
@@ -1176,29 +1173,268 @@ background-position: 0px -20px;
   padding-top: 20px;
   padding-bottom: 40px;
 }
-.brand-info{
+.brand-info {
   position: relative;
   display: block;
 }
-.brand-info > li{
+.brand-info > li {
   position: relative;
   display: block;
   width: 50%;
   border-right: 1px solid #e3e3e3;
   float: left;
 }
-.brand-info > li:last-child{
+.brand-info > li:last-child {
   border-right: 0;
 }
-.brand-info-title{
+.brand-info-title {
   text-align: center;
   font-size: 16px;
   color: #666;
   margin: 5px 0;
 }
-.brand-info-value{
+.brand-info-value {
   position: relative;
   display: block;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
+}
+/* banner */
+.banner {
+  position: relative;
+  display: block;
+  padding-bottom: 0;
+}
+.banner-slide {
+  position: relative;
+  display: block;
+}
+.banner-slide a {
+  position: relative;
+  display: block;
+}
+.banner-slide-next,
+.banner-slide-prev {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: block;
+  width: 19px;
+  height: 34px;
+  cursor: pointer;
+  border: 0;
+  z-index: 99;
+}
+.banner-slide-prev {
+  left: 20px;
+  background: url("../images/banner_arrow.png");
+}
+.banner-slide-prev:hover {
+  background-position: 0px -34px;
+}
+.banner-slide-next {
+  right: 20px;
+  background: url("../images/banner_arrow.png");
+  transform: translateY(-50%) rotateY(180deg);
+}
+.banner-slide-next:hover {
+  background-position: 0px -34px;
+}
+/* 제철요리 */
+.season{
+  position: relative;
+  display: block;
+}
+.season-wrap{
+  position: relative;
+  display: block;
+}
+.season-left {
+  position: relative;
+  display: block;
+  width: 790px;
+  height: 420px;
+  float: left;
+}
+.season-left a{
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.season-left a img{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  display: block;
+}
+.season-info{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  font-size: 0;
+  letter-spacing: 0;
+}
+.season-info h3{
+  position: relative;
+  display: inline-block;
+  width: 150px;
+  height: 150px;
+  background-color: #76bd42;
+  color: #fff;
+  font-size: 25px;
+  font-weight: 700;
+  padding: 95px 15px 25px 15px;
+  vertical-align: -10px;
+}
+.season-info p{
+  position: relative;
+  display: inline-block;
+  width: 490px;
+  height: 150px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 40px 30px;
+  white-space: nowrap;
+}
+.season-info p span{
+  position: relative;
+  display: block;
+  font-size: 25px;
+  color: #333;
+  margin-bottom: 20px;
+}
+.season-info p b{
+  position: relative;
+  display: block;
+  font-size: 30px;
+  font-weight: 700;
+}
+.season-right{
+  position: relative;
+  display: block;
+  width: calc(100% - 790px - 70px);
+  float: right;
+  /* background-color: #ff9933; */
+}
+.season-list{
+  position: relative;
+  display: block;
+  /* background-color: #cc5656; */
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 15px;
+}
+/* smooth scrollbar 적용 */
+.scrollbar-thumb {
+  width: 8px !important;
+  background: rgba(0, 0, 0, 0.5) !important;
+  border-radius: 4px !important;
+}
+.scrollbar-track {
+  background: rgba(222, 222, 222, 0) !important;
+}
+.season-good-list {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: calc(85px * 3);
+  overflow: auto;
+}
+.season-good-list li{
+  position: relative;
+  display: block;
+}
+.season-good{
+  position: relative;
+  display: block;
+  height: 70px;
+  margin-bottom: 15px;
+}
+.season-good-check{
+  position: absolute;
+  top: 0;
+  left: -20000px;
+  display: block;
+}
+.season-label{
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background: url("../images/inpCheck.png") no-repeat;
+  width: 18px;
+  height: 18px;
+  font-size: 0;
+  background-position: 0px 0px;
+}
+.season-good-check:checked + .season-label{
+  background-position: 0px -36px;
+}
+.season-good-img{
+  position: relative;
+  display: block;
+  width: 70px;
+  height: 70px;
+  margin-left: 40px;
+  overflow: hidden;
+  float: left;
+}
+.season-good-img > img{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+.season-good-info{
+  position: relative;
+  display: block;
+  /* background-color: #76bd42; */
+  padding: 10px 20px;
+  float: left;
+}
+.season-good-title{
+  position: relative;
+  display: block;
+  font-size: 13px;
+}
+.season-good-price{
+  position: relative;
+  display: block;
+  font-size: 13px;
+}
+.season-good-price em{
+  position: relative;
+  display: inline-block;
+  font-style: normal;
+  font-size: 20px;
+}
+.season-total{
+  display: block;
+  position: relative;
+}
+.season-good-total{
+  display: block;
+  position: relative;
+  background-color: #ff9933;
+  padding-left: 40px;
+  font-size: 20px;
+  color: #000;
+  margin: 30px 0;
+}
+.season-good-total em{
+  font-style: normal;
+}
+.buy-good{
+  position: relative;
+  display: block;
+  border: 1px solid #ddd;
+  text-align: center;
+  font-size: 20px;
+  padding: 18px 0;
+}
+.buy-good em {
+  font-style: normal;
 }
