--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,7 @@ body {
   display: block;
   position: relative;
   padding: 13px 0;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
 }
 .header-main-left {
   position: relative;
@@ -291,7 +291,7 @@ body {
   display: inline-block;
   padding-top: 12px;
   margin-right: 45px;
-  background-color: bisque;
+  /* background-color: bisque; */
 }
 .gnb {
   position: relative;
@@ -816,7 +816,7 @@ body {
 .today {
   position: relative;
   display: block;
-  background-color: #ff9933;
+  /* background-color: #ff9933; */
 }
 .good-wrap {
   position: relative;
@@ -1418,7 +1418,7 @@ body {
 .season-good-total{
   display: block;
   position: relative;
-  background-color: #ff9933;
+  /* background-color: #ff9933; */
   padding-left: 40px;
   font-size: 20px;
   color: #000;
@@ -1437,4 +1437,267 @@ body {
 }
 .buy-good em {
   font-style: normal;
+}
+/* 이용후기 */
+.review{
+  position: relative;
+  display: block;
+  background-color: #fcf6f2;
+}
+.review .slide-control{
+  margin-top: 25px;
+}
+.review-slide{
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 235px;
+}
+.review-box{
+  position: relative;
+  display: block;
+  width: 290px;
+  height: 100%;
+  background-color: #fff;
+  padding: 20px;
+}
+.review-box a{
+  position: relative;
+  display: block;
+}
+.review-box-desc{
+  position: relative;
+  display: block;
+  width: 100%;
+  /* background-color: #76bd42; */
+  height: 66px;
+  margin-bottom: 15px;
+}
+.review-box-title{
+  position: relative;
+  display: block;
+  font-size: 17px;
+  /* 말줄임 */
+  width: 165px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-bottom: 5px;
+}
+.review-box-star{
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 20px;
+  font-size: 17px;
+  font-weight: 500;
+  padding-left: 25px;
+}
+.review-box-star::before{
+  content: "";
+  background: url("../images/icoRating.png") no-repeat;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  width: 18px;
+  height: 18px;
+}
+.review-box-img{
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 66px;
+  height: 66px;
+  overflow: hidden;
+}
+.review-box-img img{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  width: 100%;
+}
+.review-box-txt{
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 70px;
+  font-size: 13px;
+  /* 2줄 말줄임 */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  margin-bottom: 20px;
+}
+.review-box-user{
+  position: relative;
+  display: block;
+  font-size: 13px;
+}
+/* 커뮤니티 */
+.community{
+  position: relative;
+  display: block;
+}
+.community-notice{
+  position: relative;
+  display: block;
+  width: calc(100% / 3);
+  /* background-color: #76bd42; */
+  padding: 0 40px;
+  float: left;
+}
+.community-notice > dl{
+  display: block;
+  position: relative;
+}
+.community-notice > dl > dt {
+  display: block;
+  position: relative;
+  padding: 0 10px;
+  float: left;
+}
+.community-notice > dl > dt:nth-child(1){
+  padding-left: 0;
+  /* background-color: #ff9933; */
+}
+.community-notice > dl > dt:nth-child(1)::after{
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: block;
+  width: 1px;
+  height: 18px;
+  background-color: #e5e5e5;
+}
+.community-bt {
+  position: relative;
+  display: block;
+  border: 0;
+  cursor: pointer;
+  background: transparent;
+  font-size: 20px;
+  color: #999;
+}
+.community-bt-active{
+  color: #000;
+  font-weight: 700;
+  
+}
+.community-info{
+  position: relative;
+  display: block;
+  width: calc(100% / 3);
+  padding: 0 40px;
+  float: left;
+}
+.community-info h3{
+  position: relative;
+  display: block;
+  color: #000;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.tel{
+  position: relative;
+  display: block;
+  font-size: 32px;
+  color: #76bd42;
+  margin-bottom: 15px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+.community-info-list{
+  position: relative;
+  display: block;
+}
+.community-info-list li{
+  display: block;
+  position: relative;
+  font-size: 13px;
+  line-height: 1;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+.t1{
+  color: #666;
+}
+.t2{
+  color: #000;
+}
+.t3{
+  color: #000;
+}
+.community-info-list > li > a{
+  font-weight: 700;
+}
+.community-info-list > li > b{
+  font-weight: 700;
+}
+.community-help{
+  position: relative;
+  display: block;
+  width: calc(100% / 3);
+  padding: 0 40px;
+  float: left;
+}
+.community-help h3{
+  position: relative;
+  display: block;
+  color: #000;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.community-help-list{
+  position: relative;
+  display: block;
+
+}
+.community-help-list > li{
+  position: relative;
+  display: block;
+  width:calc(50% - 5px);
+  margin-bottom: 10px;
+}
+.community-help-list > li:nth-child(2n+1) {
+  float: left;
+}
+.community-help-list > li:nth-child(2n) {
+  float: right;
+}
+.community-help-list > li > a{
+  position: relative;
+  display: block;
+  width: 100%;
+  border: 1px solid #e5e5e5;
+  padding: 0 12px;
+  line-height: 36px;
+  font-size: 13px;
+  color: #333;
+}
+.community-help-list > li > a::after{
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 12px;
+  background: url("../images/icoFaq.png") no-repeat;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 12px;
+}
+.community-line::after{
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: block;
+  width: 1px;
+  height: 190px;
+  background-color: #ddd;
 }
